--- a/example/example.html
+++ b/example/example.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Editor.js 🤩🧦🤨 example</title>
@@ -8,6 +9,7 @@
   <script src="assets/json-preview.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
+
 <body>
   <div class="ce-example">
     <div class="ce-example__header">
@@ -79,7 +81,7 @@
      * To initialize the Editor, create a new instance with configuration object
      * @see docs/installation.md for mode details
      */
-    var editor = new EditorJS({
+    var editor = new EditorJS( {
       /**
        * Enable/Disable the read only mode
        */
@@ -107,7 +109,7 @@
          */
         header: {
           class: Header,
-          inlineToolbar: ['marker', 'link'],
+          inlineToolbar: [ 'marker', 'link' ],
           config: {
             placeholder: 'Header'
           },
@@ -143,12 +145,12 @@
         warning: Warning,
 
         marker: {
-          class:  Marker,
+          class: Marker,
           shortcut: 'CMD+SHIFT+M'
         },
 
         code: {
-          class:  CodeTool,
+          class: CodeTool,
           shortcut: 'CMD+SHIFT+C'
         },
 
@@ -189,9 +191,12 @@
             }
           },
           {
-            type : 'paragraph',
-            data : {
-              text : 'Hey. Meet the new Editor. On this page you can see it in action — try to edit this text. Source code of the page contains the example of connection and configuration.'
+            type: 'paragraph',
+            data: {
+              text: 'Hey. Meet the new Editor. On this page you can see it in action — try to edit this text. Source code of the page contains the example of connection and configuration.'
+            },
+            settings: {
+              "noIndex": true
             }
           },
           {
@@ -202,9 +207,9 @@
             }
           },
           {
-            type : 'list',
-            data : {
-              items : [
+            type: 'list',
+            data: {
+              items: [
                 'It is a block-styled editor',
                 'It returns clean data output in JSON',
                 'Designed to be extendable and pluggable with a simple API',
@@ -220,15 +225,15 @@
             }
           },
           {
-            type : 'paragraph',
-            data : {
-              text : 'Workspace in classic editors is made of a single contenteditable element, used to create different HTML markups. Editor.js <mark class=\"cdx-marker\">workspace consists of separate Blocks: paragraphs, headings, images, lists, quotes, etc</mark>. Each of them is an independent contenteditable element (or more complex structure) provided by Plugin and united by Editor\'s Core.'
+            type: 'paragraph',
+            data: {
+              text: 'Workspace in classic editors is made of a single contenteditable element, used to create different HTML markups. Editor.js <mark class=\"cdx-marker\">workspace consists of separate Blocks: paragraphs, headings, images, lists, quotes, etc</mark>. Each of them is an independent contenteditable element (or more complex structure) provided by Plugin and united by Editor\'s Core.'
             }
           },
           {
-            type : 'paragraph',
-            data : {
-              text : `There are dozens of <a href="https://github.com/editor-js">ready-to-use Blocks</a> and the <a href="https://editorjs.io/creating-a-block-tool">simple API</a> for creation any Block you need. For example, you can implement Blocks for Tweets, Instagram posts, surveys and polls, CTA-buttons and even games.`
+            type: 'paragraph',
+            data: {
+              text: `There are dozens of <a href="https://github.com/editor-js">ready-to-use Blocks</a> and the <a href="https://editorjs.io/creating-a-block-tool">simple API</a> for creation any Block you need. For example, you can implement Blocks for Tweets, Instagram posts, surveys and polls, CTA-buttons and even games.`
             }
           },
           {
@@ -239,31 +244,31 @@
             }
           },
           {
-            type : 'paragraph',
-            data : {
-              text : 'Classic WYSIWYG-editors produce raw HTML-markup with both content data and content appearance. On the contrary, Editor.js outputs JSON object with data of each Block. You can see an example below'
+            type: 'paragraph',
+            data: {
+              text: 'Classic WYSIWYG-editors produce raw HTML-markup with both content data and content appearance. On the contrary, Editor.js outputs JSON object with data of each Block. You can see an example below'
             }
           },
           {
-            type : 'paragraph',
-            data : {
-              text : `Given data can be used as you want: render with HTML for <code class="inline-code">Web clients</code>, render natively for <code class="inline-code">mobile apps</code>, create markup for <code class="inline-code">Facebook Instant Articles</code> or <code class="inline-code">Google AMP</code>, generate an <code class="inline-code">audio version</code> and so on.`
+            type: 'paragraph',
+            data: {
+              text: `Given data can be used as you want: render with HTML for <code class="inline-code">Web clients</code>, render natively for <code class="inline-code">mobile apps</code>, create markup for <code class="inline-code">Facebook Instant Articles</code> or <code class="inline-code">Google AMP</code>, generate an <code class="inline-code">audio version</code> and so on.`
             }
           },
           {
-            type : 'paragraph',
-            data : {
-              text : 'Clean data is useful to sanitize, validate and process on the backend.'
+            type: 'paragraph',
+            data: {
+              text: 'Clean data is useful to sanitize, validate and process on the backend.'
             }
           },
           {
-            type : 'delimiter',
-            data : {}
+            type: 'delimiter',
+            data: {}
           },
           {
-            type : 'paragraph',
-            data : {
-              text : 'We have been working on this project more than three years. Several large media projects help us to test and debug the Editor, to make its core more stable. At the same time we significantly improved the API. Now, it can be used to create any plugin for any task. Hope you enjoy. 😏'
+            type: 'paragraph',
+            data: {
+              text: 'We have been working on this project more than three years. Several large media projects help us to test and debug the Editor, to make its core more stable. At the same time we significantly improved the API. Now, it can be used to create any plugin for any task. Hope you enjoy. 😏'
             }
           },
           {
@@ -278,46 +283,47 @@
           },
         ]
       },
-      onReady: function(){
+      onReady: function () {
         saveButton.click();
       },
-      onChange: function() {
-        console.log('something changed');
+      onChange: function () {
+        console.log( 'something changed' );
       }
-    });
+    } );
 
     /**
      * Saving button
      */
-    const saveButton = document.getElementById('saveButton');
+    const saveButton = document.getElementById( 'saveButton' );
 
     /**
      * Toggle read-only button
      */
-    const toggleReadOnlyButton = document.getElementById('toggleReadOnlyButton');
-    const readOnlyIndicator = document.getElementById('readonly-state');
+    const toggleReadOnlyButton = document.getElementById( 'toggleReadOnlyButton' );
+    const readOnlyIndicator = document.getElementById( 'readonly-state' );
 
     /**
      * Saving example
      */
-    saveButton.addEventListener('click', function () {
+    saveButton.addEventListener( 'click', function () {
       editor.save()
-        .then((savedData) => {
-          cPreview.show(savedData, document.getElementById("output"));
-        })
-        .catch((error) => {
-          console.error('Saving error', error);
-        });
-    });
+        .then( ( savedData ) => {
+          cPreview.show( savedData, document.getElementById( "output" ) );
+        } )
+        .catch( ( error ) => {
+          console.error( 'Saving error', error );
+        } );
+    } );
 
     /**
      * Toggle read-only example
      */
-    toggleReadOnlyButton.addEventListener('click', async () => {
+    toggleReadOnlyButton.addEventListener( 'click', async () => {
       const readOnlyState = await editor.readOnly.toggle();
 
       readOnlyIndicator.textContent = readOnlyState ? 'On' : 'Off';
-    });
+    } );
   </script>
 </body>
+
 </html>
